--- a/meeting_notes/15_05_22.md
+++ b/meeting_notes/15_05_22.md
@@ -4,3 +4,17 @@
 
 - We can follow this basic photon tutorial during our next meeting to create a basic online setting: [https://doc.photonengine.com/en-us/pun/v2/demos-and-tutorials/pun-basics-tutorial/intro]()
 - Can discuss Unity WebGL Development. Should we develop two seperate code repositories (one for Player one for Supervisor) and connect them via Photon? (btw, seems Photon uses its own cloud servers rather than a localhost implementation.)
+
+## Meeting
+
+- If more research for the cues is asked, we can always follow the papers and the cue types Buse has put in for **sources.md** and follow the reference tree of those papers to add as much research material as we need.
+- Sooraj needs to send us the following, remind if he did not:
+  - A Demo Scene from ViaVR
+- - Photon Arcihtecture
+  - Git Repo (whether it should be created like Martin did last time)
+  - Any relevant references
+- Possibly we will need to use many Utility Assets like Color Palette (which would potentially be non-free). Do we get a budget for those?
+- Ask whether we can get laptops and VR sets from him or Martin.
+- Should we start the UML Diagrams/functional requirements etc. first?
+- Better to plan things really thoroughly, because the development will be quite extensive, some concessions might need to be made with regards to both having fully developed app and research (Kerem's opinion)
+-
