Update meeting notes

--- a/meeting_notes/15_05_22.md
+++ b/meeting_notes/15_05_22.md
@@ -3,7 +3,14 @@
 ## Pre-Meeting
 
 - We can follow this basic photon tutorial during our next meeting to create a basic online setting: [https://doc.photonengine.com/en-us/pun/v2/demos-and-tutorials/pun-basics-tutorial/intro]()
-- Can discuss Unity WebGL Development. Should we develop two seperate code repositories (one for Player one for Supervisor) and connect them via Photon? (btw, seems Photon uses its own cloud servers rather than a localhost implementation.)
+- Can discuss Unity WebGL Development. Should we develop two seperate code repositories (one for Player one for Supervisor) and connect them via Photon? (btw, seems Photon uses its own cloud servers rather than a localhost implementation.) Rahul says, we just simply create an exe and run as desktop app. The reason is, WebGL is not ideal and optimized, there is no advantage of going with WebGL over desktop app.
+- **There are main two plugin to that we can use to develop the video streaming (Display player view on supervisor)**
+
+[1. Plugin 1(Unity official plugin)](https://docs.unity3d.com/Packages/com.unity.renderstreaming@2.0/manual/index.html)
+
+[2. Plugin 2(Thrid party paid plugin)](https://assetstore.unity.com/packages/templates/packs/fmetp-stream-v2-202537#description)
+
+My opinion would be to use the Unity's official plugin but if ViA VR already using some other plugin it would be better if we use that.
 
 ## Meeting
 
@@ -17,4 +24,4 @@
 - Ask whether we can get laptops and VR sets from him or Martin.
 - Should we start the UML Diagrams/functional requirements etc. first?
 - Better to plan things really thoroughly, because the development will be quite extensive, some concessions might need to be made with regards to both having fully developed app and research (Kerem's opinion)
--
+- Ask which plugin they use for ViaVR for video streaming (more info on top).
