Update meeting notes

--- a/meeting_notes/22_05_15.md
+++ b/meeting_notes/22_05_15.md
@@ -16,12 +16,12 @@ My opinion would be to use the Unity's official plugin but if ViA VR already usi
 
 - If more research for the cues is asked, we can always follow the papers and the cue types Buse has put in for **sources.md** and follow the reference tree of those papers to add as much research material as we need.
 - Sooraj needs to send us the following, remind if he did not:
-  - A Demo Scene from ViaVR
-- - Photon Arcihtecture
-  - Git Repo (whether it should be created like Martin did last time)
-  - Any relevant references
+  - A Demo Scene from ViaVR (Develop a white room scene ourselves for now)
+- - Photon Arcihtecture (Waiting for input)
+  - Git Repo (whether it should be created like Martin did last time) (For now continue in our own group)
+  - Any relevant references (Package Registry access will possibly come soon.)
 - Possibly we will need to use many Utility Assets like Color Palette (which would potentially be non-free). Do we get a budget for those?
 - Ask whether we can get laptops and VR sets from him or Martin.
-- Should we start the UML Diagrams/functional requirements etc. first?
+- **We should start the UML Diagrams/functional requirements etc. first?**
 - Better to plan things really thoroughly, because the development will be quite extensive, some concessions might need to be made with regards to both having fully developed app and research (Kerem's opinion)
 - Ask which plugin they use for ViaVR for video streaming (more info on top).
